Generate installer chart values schema
