# apis/installer/v1alpha1/grafana_operator_types.go
@@ -97,9 +97,7 @@ type GrafanaOperatorSpec struct {
 	PodSecurityContext *core.PodSecurityContext `json:"podSecurityContext"`
 	ServiceAccount     ServiceAccountSpec       `json:"serviceAccount"`
 	Apiserver          WebHookSpec              `json:"apiserver"`
-	//+optional
-	EnableAnalytics bool       `json:"enableAnalytics"`
-	Monitoring      Monitoring `json:"monitoring"`
+	Monitoring         Monitoring               `json:"monitoring"`
 }
 
 type ServiceAccountSpec struct {
