# charts/grafana-operator/values.openapiv3_schema.yaml
@@ -801,16 +801,17 @@ properties:
         type: string
       repository:
         type: string
+      skip:
+        type: boolean
       tag:
         type: string
     required:
     - registry
     - repository
+    - skip
     - tag
     type: object
   criticalAddon:
-    type: boolean
-  enableAnalytics:
     type: boolean
   fullnameOverride:
     type: string
@@ -827,13 +828,6 @@ properties:
     properties:
       agent:
         type: string
-      operator:
-        type: boolean
-      prometheus:
-        properties:
-          namespace:
-            type: string
-        type: object
       serviceMonitor:
         properties:
           labels:
@@ -843,7 +837,6 @@ properties:
         type: object
     required:
     - agent
-    - prometheus
     - serviceMonitor
     type: object
   nameOverride:
@@ -980,11 +973,11 @@ properties:
                   "Localhost".
                 type: string
               type:
-                description: "type indicates which kind of seccomp profile will be
-                  applied. Valid options are: \n Localhost - a profile defined in
-                  a file on the node should be used. RuntimeDefault - the container
-                  runtime default profile should be used. Unconfined - no profile
-                  should be applied."
+                description: "type indicates which kind of seccomp profile will be\
+                  \ applied. Valid options are: \n Localhost - a profile defined in\
+                  \ a file on the node should be used. RuntimeDefault - the container\
+                  \ runtime default profile should be used. Unconfined - no profile\
+                  \ should be applied."
                 type: string
             required:
             - type
@@ -1031,12 +1024,13 @@ properties:
       values of each field.'
     properties:
       fsGroup:
-        description: "A special supplemental group that applies to all containers
-          in a pod. Some volume types allow the Kubelet to change the ownership of
-          that volume to be owned by the pod: \n 1. The owning GID will be the FSGroup
-          2. The setgid bit is set (new files created in the volume will be owned
-          by FSGroup) 3. The permission bits are OR'd with rw-rw---- \n If unset,
-          the Kubelet will not modify the ownership and permissions of any volume."
+        description: "A special supplemental group that applies to all containers\
+          \ in a pod. Some volume types allow the Kubelet to change the ownership\
+          \ of that volume to be owned by the pod: \n 1. The owning GID will be the\
+          \ FSGroup 2. The setgid bit is set (new files created in the volume will\
+          \ be owned by FSGroup) 3. The permission bits are OR'd with rw-rw---- \n\
+          \ If unset, the Kubelet will not modify the ownership and permissions of\
+          \ any volume."
         format: int64
         type: integer
       fsGroupChangePolicy:
@@ -1098,10 +1092,10 @@ properties:
               seccomp profile location. Must only be set if type is "Localhost".
             type: string
           type:
-            description: "type indicates which kind of seccomp profile will be applied.
-              Valid options are: \n Localhost - a profile defined in a file on the
-              node should be used. RuntimeDefault - the container runtime default
-              profile should be used. Unconfined - no profile should be applied."
+            description: "type indicates which kind of seccomp profile will be applied.\
+              \ Valid options are: \n Localhost - a profile defined in a file on the\
+              \ node should be used. RuntimeDefault - the container runtime default\
+              \ profile should be used. Unconfined - no profile should be applied."
             type: string
         required:
         - type
